--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "20.x",
+    "npm": "9.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,7 +20,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "react-textfit": "^1.1.1"
+    "react-fittext": "^1.0.0" 
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
