--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://AKASH-0018-AK.github.io/dashboard-intern",
   "name": "finalyearproject",
   "private": true,
   "version": "0.0.0",
@@ -33,4 +34,5 @@
     "tailwindcss": "^4.0.0",
     "vite": "^7.1.6"
   }
+  
 }
